# pyrolite-meltsutil

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  setup.cfg  setup.py
.github/workflows/: docstest.yml  unittest.yml
binder/: environment.yml  postBuild
docs/: Makefile  docs_require.txt  make.bat
docs/api/: API.rst
docs/dev/: debugging.rst  development.rst
docs/source/: cite.rst  conf.py  examples.rst  index.rst  installation.rst  tutorials.rst
docs/source/api/: API.rst
draft/_archived/: projections.py
pyrolite_meltsutil/: __init__.py  _version.py  automation.py  download.py  env.py  meltsfile.py  parse.py  plottemplates.py  tables.py  util.py  web.py
pyrolite_meltsutil/automation/: __init__.py  naming.py  org.py  process.py  timing.py
pyrolite_meltsutil/data/: __init__.py
pyrolite_meltsutil/tables/: __init__.py  load.py  summary.py  util.py
pyrolite_meltsutil/util/: __init__.py  __int__.py  general.py  log.py  synthetic.py  tables.py
pyrolite_meltsutil/vis/: __init__.py  scss.py  style.py  templates.py
test/: automation.py  conftest.py  download.py  env.py  meltsfile.py  parse.py  plottemplates.py  tables.py  util.py  web.py
test/automation/: automation.py  automation_automation.py  automation_naming.py  automation_org.py
test/tables/: tables.py  tables_import.py  tables_tables.py
test/util/: util_general.py  util_synthetic.py  util_tables.py
test/vis/: vis_scss.py  vis_style.py  vis_templates.py
(+607 files in other folders)
