[aliases]
test=pytest

[tool:pytest]
addopts = test --cov=pyrolite_meltsutil --cov-report html --cov-report term-missing --cov-config .coveragerc
python_files = *.py

[versioneer]
VCS = git
style = pep440
versionfile_source = pyrolite_meltsutil/_version.py
versionfile_build = pyrolite_meltsutil/_version.py
tag_prefix =
parentdir_prefix = pyrolite-meltsutil-

[metadata]
description_file = README.md
license_file = LICENSE
